SSC-1138 header, fix logo size on small viewport

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-header.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-header.less
@@ -18,11 +18,22 @@
         z-index: 1020;
     }
 
+    @media screen and (max-width: @screen-sm) {
+        &__logo-wrapper {
+            padding-left: 10px;
+            padding-right: 0;
+        }
+    }
+
     &__inner {
         height: 60px;
         display: table-cell;
         padding-left: 10px;
         vertical-align: middle;
+
+        @media screen and (max-width: @screen-sm) {
+            padding-left: 0;
+        }
     }
 
     &__logo {
